--- a/package.json
+++ b/package.json
@@ -28,7 +28,8 @@
     "gulp-uglify": "^1.5.3",
     "gulp.spritesmith": "^6.2.1",
     "imagemin-jpegoptim": "^4.1.0",
-    "imagemin-pngquant": "^4.2.0"
+    "imagemin-pngquant": "^4.2.0",
+    "run-sequence": "^1.2.2"
   },
   "dependencies": {},
   "repository": {
